# openaibot

./: .gitignore  README.md  pyproject.toml  setup.py
openaibot/: ai.py  app.py  config.py  lobby.py  state.py  worker.py
openaibot/chats/: telegram.py
